Add connector template generator
